<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Fragment.HomeFragment">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <ImageView
            android:id="@+id/iv_back"
            android:layout_width="40dp"
            android:layout_height="40dp"
            android:layout_marginStart="@dimen/_4dp"
            android:layout_marginTop="@dimen/_5dp"
            android:src="@drawable/ic_arrowback" />

        <TextView
            android:id="@+id/tv_top_store"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/_5dp"
            android:layout_toEndOf="@id/iv_back"
            android:gravity="center"
            android:text="@string/store"
            android:textColor="@android:color/black"
            android:textSize="@dimen/_24sp"
            android:textStyle="bold" />

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/et_layout"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_below="@id/iv_back"
            android:layout_marginStart="@dimen/_24dp"
            android:layout_marginTop="@dimen/_24dp"
            android:layout_marginEnd="24dp"
            app:boxCornerRadiusBottomEnd="@dimen/_8dp"
            app:boxCornerRadiusBottomStart="@dimen/_8dp"
            app:boxCornerRadiusTopEnd="@dimen/_8dp"
            app:boxCornerRadiusTopStart="@dimen/_8dp">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/et_search"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:drawableStart="@drawable/ic_search_black_24dp"
                android:drawablePadding="@dimen/_8dp"
                android:hint="@string/lable_hint" />
        </com.google.android.material.textfield.TextInputLayout>

        <com.synnapps.carouselview.CarouselView
            android:id="@+id/is_main"
            android:layout_width="match_parent"
            android:layout_height="@dimen/_250dp"
            android:layout_below="@id/et_layout"
            android:layout_marginTop="41dp"
            app:fillColor="@android:color/white"
            app:pageColor="@android:color/transparent"
            app:radius="@dimen/_5dp"
            app:slideInterval="3000"
            app:strokeColor="@color/strokeColor"
            app:strokeWidth="@dimen/_1dp" />

        <TextView
            android:id="@+id/tv_most_popular"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/is_main"
            android:layout_alignParentStart="true"
            android:layout_marginStart="@dimen/margin_all"
            android:layout_marginTop="@dimen/margin_all"
            android:text="@string/most_popular"
            android:textColor="@android:color/black"
            android:textSize="@dimen/_18sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/tv_see_all"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/is_main"
            android:layout_alignParentEnd="true"
            android:layout_marginTop="@dimen/margin_all"
            android:layout_marginEnd="@dimen/margin_all"
            android:text="@string/see_all"
            android:textColor="@android:color/holo_blue_bright"
            android:textSize="@dimen/_18sp"
            android:textStyle="bold" />

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/rv_popular"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/tv_most_popular"
            android:layout_marginStart="@dimen/margin_all"
            android:layout_marginTop="@dimen/_5dp"
            android:layout_marginEnd="@dimen/margin_all"
            android:orientation="horizontal" />

        <TextView
            android:id="@+id/tv_seafood"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/rv_popular"
            android:layout_alignParentStart="true"
            android:layout_marginStart="@dimen/margin_all"
            android:layout_marginTop="@dimen/margin_all"
            android:text="@string/seafood"
            android:textColor="@android:color/black"
            android:textSize="@dimen/_18sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/tv_seeall_best"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/rv_popular"
            android:layout_alignParentEnd="true"
            android:layout_marginTop="@dimen/margin_all"
            android:layout_marginEnd="@dimen/margin_all"
            android:text="@string/see_all"
            android:textColor="@android:color/holo_blue_bright"
            android:textSize="@dimen/_18sp"
            android:textStyle="bold" />

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/rv_home_seafood"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/tv_seafood"
            android:layout_marginStart="@dimen/margin_all"
            android:layout_marginTop="@dimen/_5dp"
            android:layout_marginEnd="@dimen/margin_all" />


    </RelativeLayout>


</ScrollView>