<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_margin="@dimen/margin_all"
    android:orientation="vertical"
    app:cardCornerRadius="@dimen/margin_all">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <FrameLayout
            android:id="@+id/fm_staggered"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <FrameLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:foreground="@drawable/bg_white">

                <ImageView
                    android:id="@+id/iv_staggered_name"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_gravity="center"
                    android:scaleType="fitXY"
                    android:src="@drawable/rendang" />
            </FrameLayout>

            <TextView
                android:id="@+id/tv_staggered_name"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="bottom"
                android:layout_marginStart="@dimen/_5dp"
                android:layout_marginEnd="@dimen/_5dp"
                android:text="@string/lable_name"
                android:textColor="@android:color/white"
                android:textSize="@dimen/_15sp"
                android:textStyle="bold"/>

        </FrameLayout>

        <com.google.android.material.floatingactionbutton.FloatingActionButton
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_above="@id/tv_address"
            android:layout_alignParentEnd="true"
            android:layout_marginEnd="@dimen/margin_all"
            android:backgroundTint="@color/colorPrimaryDark"
            app:fabSize="mini"
            app:layout_anchor="@id/fm_staggered"
            app:srcCompat="@drawable/ic_favorite_border"/>


        <TextView
            android:id="@+id/tv_staggered_kind"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/_10dp"
            android:layout_marginEnd="@dimen/_10dp"
            android:textColor="@android:color/black"
            android:layout_marginTop="@dimen/_5dp"
            android:textStyle="bold"
            android:layout_below="@id/fm_staggered"
            android:text="@string/lable_kind" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/tv_address"
            android:layout_marginStart="10dp"
            android:layout_marginEnd="10dp"
            android:layout_below="@id/tv_staggered_kind"
            android:textColor="@android:color/black"
            android:textStyle="bold"
            android:layout_marginTop="@dimen/_5dp"
            android:text="@string/lable_address"
            android:textSize="14sp" />

        <TextView
            android:id="@+id/tv_staggered_address"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/tv_address"
            android:layout_marginStart="10dp"
            android:layout_marginEnd="10dp"
            android:text="@string/lable_address"
            android:textSize="14sp" />


        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            android:layout_below="@id/tv_staggered_address"
            android:id="@+id/tv_desc"
            android:layout_marginEnd="10dp"
            android:textColor="@android:color/black"
            android:textStyle="bold"
            android:layout_marginTop="@dimen/_5dp"
            android:text="@string/lable_desc"
            android:textSize="14sp" />

        <TextView
            android:id="@+id/tv_staggered_desc"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/_10dp"
            android:layout_below="@id/tv_desc"
            android:maxLines="2"
            android:ellipsize="end"
            android:text="@string/lable_desc"
            android:paddingBottom="@dimen/_10dp"
            android:textSize="14sp"/>



    </RelativeLayout>


</androidx.cardview.widget.CardView>